--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   speech_to_text: ^6.3.0
-  flutter_tts: ^4.2.3
+  # flutter_tts: ^4.2.3
   printing: ^5.14.2
   http: ^1.4.0
   wakelock: ^0.6.2
