--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -1,3 +1,5 @@
+dependency_overrides:
+  win32: ^5.14.0
 name: flutter_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
@@ -28,18 +30,24 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  wakelock_plus: ^1.1.4
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  speech_to_text: ^6.3.0
-  # flutter_tts: ^4.2.3
+  stts: ^1.2.4
   printing: ^5.14.2
   http: ^1.4.0
-  wakelock: ^0.6.2
   audio_waveforms: ^1.0.4
+
+  flutter_sound: ^9.2.13
+
+  permission_handler: ^11.3.1
+
+  record: ^6.0.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -63,10 +71,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  #   - assets/models/vosk-model-small-en-us-0.15/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
