--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -38,9 +38,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   stts: ^1.2.4
-  printing: ^5.14.2
   http: ^1.4.0
   audio_waveforms: ^1.0.4
+
+
 
   flutter_sound: ^9.2.13
 
@@ -48,6 +49,8 @@ dependencies:
 
   record: ^6.0.0
   provider: ^6.1.5
+
+  window_size: ^0.1.0
 
 dev_dependencies:
   flutter_test:
