--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   provider: ^6.1.5
 
   window_size: ^0.1.0
+  path_provider: ^2.1.2
+  waveform_recorder: 1.7.0
 
 dev_dependencies:
   flutter_test:
