--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   stts: ^1.2.4
-  speech_to_text: ^6.6.0
+  speech_to_text: 7.1.0
   http: ^1.4.0
   audio_waveforms: ^1.0.4
 
